tests/invalid/simple/TupleDefine_CompileFail_3.whiley
define tcf3byte as int where $ >=0 && $ <= 255

define tups as (tcf3byte x, tcf3short y)
